--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Connection for prisma
-DATABASE_URL="postgresql://admin:password@localhost:5432/nest-social-api?schema=public"
+DATABASE_URL="postgresql://root:root@localhost:5432/nest-antitail?schema=public"
 
 # Postgres config variables
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=password
-POSTGRES_DB="nest-social-api"
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_DB="nest-antitail"
 
 # Cors config
 CORS_ORIGIN="http://localhost:8000"
