--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,30 @@
 services:
+  nestapp:
+    container_name: nestapp
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+      - /app/node_modules
+    ports:
+      - 3000:3000
+    command: npm run start
+    depends_on:
+      - postgres
+
   postgres:
+    container_name: postgres
     image: postgres:alpine
-    restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=nest-antitail
+      - PG_DATA=/var/lib/postgresql/data
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     ports:
       - 5432:5432
-    volumes:
-      - ./pgdata:/var/lib/postgresql/data
 
 volumes:
   pgdata:
