--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - /app/node_modules
     ports:
       - 3000:3000
-    command: npm run start
+    command: npm run start:migrate
     depends_on:
       - postgres
 
