feat: refactor modules subjects, task-types, tasks, subtasks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  nestapp:
-    container_name: nestapp
+  app:
+    container_name: app
     build:
       context: .
       dockerfile: Dockerfile
@@ -8,8 +8,8 @@ services:
       - .:/app
       - /app/node_modules
     ports:
-      - 3000:3000
-    command: npm run start:migrate
+      - ${APP_PORT}:${APP_PORT}
+    command: npm run start
     depends_on:
       - postgres
 
@@ -19,13 +19,12 @@ services:
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - PG_DATA=/var/lib/postgresql/data
+      - POSTGRES_DB=${POSTGRES_DATABASE}
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
-      - 5433:5433
-    command: -p 5433
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+    command: -p ${POSTGRES_PORT}
 
 volumes:
   pgdata:
