--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,11 @@
-# Connection for prisma
-DATABASE_URL="postgresql://root:root@postgres:5433/nest-antitail?schema=public"
-
-# Postgres config variables
-POSTGRES_USER=root
-POSTGRES_PASSWORD=root
-POSTGRES_DB="nest-antitail"
-
-# Cors config
+APP_PORT=3000
 CORS_ORIGIN="http://localhost:8000"
-
-# JWT config
 JWT_ACCESS_SECRET="jwt-access-key"
+
+POSTGRES_USER="root"
+POSTGRES_PASSWORD="root"
+POSTGRES_HOST="localhost"
+POSTGRES_PORT=5432
+POSTGRES_DATABASE="nestjs-antitail"
+
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public"
