--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ POSTGRES_HOST="localhost"
 POSTGRES_PORT=5432
 POSTGRES_DATABASE="nestjs-antitail"
 
+# DATABASE_URL="postgresql://root:root@localhost:5432/nestjs-antitail?schema=public"
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public"
