--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^11.1.2",
+    "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.2",
+    "@nestjs/core": "^11.1.3",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.1.2",
+    "@nestjs/platform-express": "^11.1.3",
     "@prisma/client": "^6.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -39,11 +39,11 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
-    "@nestjs/testing": "^11.1.2",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^5.0.2",
+    "@nestjs/testing": "^11.1.3",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.29",
+    "@types/node": "^22.15.30",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
@@ -60,7 +60,8 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.1"
   },
   "jest": {
     "moduleFileExtensions": [
