feat: create unit tests for phones, update eslint config

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_PORT=3000
 CORS_ORIGIN="http://localhost:8000"
-JWT_ACCESS_SECRET="jwt-access-key"
+JWT_ACCESS_SECRET="jwt-access-secret"
 
 POSTGRES_USER="root"
 POSTGRES_PASSWORD="root"
