--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nestjs-anti-tail",
+  "name": "nestjs-anti-tai",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
-  "license": "ISC",
+  "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write .",
@@ -24,7 +24,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.3",
     "@prisma/client": "^6.9.0",
@@ -37,20 +37,23 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.28.0",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
+    "@swc/cli": "^0.7.7",
+    "@swc/core": "^1.11.31",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.30",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.33.1",
-    "@typescript-eslint/parser": "^8.33.1",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
+    "globals": "^16.2.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "prisma": "^6.9.0",
@@ -61,7 +64,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.1"
+    "typescript-eslint": "^8.34.0"
   },
   "jest": {
     "moduleFileExtensions": [
