--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "printWidth": 100,
   "tabWidth": 2,
   "semi": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "plugins": ["prettier-plugin-organize-imports"]
 }
