--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "globals": "^16.2.0",
     "jest": "^30.0.2",
     "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "prisma": "^6.10.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.1",
